added test selection enum
